cluster/apps/flux-system/webhook/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    external-dns.home.arpa/enabled: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "flux-webhook.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - "flux-webhook.${SECRET_PUBLIC_DOMAIN}"
